# fraud-detection

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements-production.txt  requirements.txt
fraud_detection/: common.py  config.py  dataset.py  experiment.py  predict.py  train.py
notebooks/: 0-rg-eda.ipynb  1-rg-baseline.ipynb
tests/: test_predict.py
